reminder in ClientLead

--- a/ATOZ/MvcRetailApp/MvcRetailApp.csproj
+++ b/ATOZ/MvcRetailApp/MvcRetailApp.csproj
@@ -2305,6 +2305,7 @@
     <Content Include="Views\ClientLead\DeletePartial.cshtml" />
     <Content Include="Views\ClientLead\ClientLeadDetails.cshtml" />
     <Content Include="Views\MisReports\ClientLeadReport.cshtml" />
+    <Content Include="Views\Dashboard\GetReminder.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ReportEngine\RetailBillLetterHeadWithMRP.rdlc">
