--- a/ATOZ/MvcRetailApp/Web.config
+++ b/ATOZ/MvcRetailApp/Web.config
@@ -12,9 +12,9 @@
     <!--<add name="A_To_Z_DADAR_T_T__01_04_2015_To_31_03_2016ConnectionString"
       connectionString="Data Source=MARIAINFOTECH;Initial Catalog=&quot;A To Z DADAR T.T. 01-04-2015 To 31-03-2016&quot;;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="CodeFirstContext" connectionString="Data Source=DEVELOPER2-PC\SQLEXPRESS;Initial Catalog=RetailManagement4;Integrated Security=True"
+    <add name="CodeFirstContext" connectionString="Data Source=DESIGNER1-PC\SQLEXPRESS;Initial Catalog=RetailManagement4;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="RetailManagement3ConnectionString" connectionString="Data Source=DEVELOPER2-PC\SQLEXPRESS;Initial Catalog=&quot;RetailManagement4 &quot;;Integrated Security=True"
+    <add name="RetailManagement3ConnectionString" connectionString="Data Source=DESIGNER1-PC\SQLEXPRESS;Initial Catalog=&quot;RetailManagement4 &quot;;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <!--<add name="ConnectionString" connectionString="Data Source=localhost;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
